# hpp-gui-breakpad

./: CMakeLists.txt  README.md
include/hpp/gui/plugin/: breakpad-plugin.hh
scripts/: generate_symbols.sh.in
src/: breakpad-plugin.cc  breakpad-plugin.cc.in
